--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/okpoEkpenyong.github.io/vesoft.web",
+  "homepage": "http://okpoEkpenyong.github.io/vesoft.web",
   "name": "vesoft.web",
   "version": "0.1.0",
   "private": true,
